--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,15 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.115.11",
     "firebase-admin>=6.7.0",
+    "google-genai>=1.7.0",
+    "google-generativeai>=0.8.4",
     "pandas>=2.2.3",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
     "uvicorn>=0.34.0",
+]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.29.5",
 ]
