--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.115.11",
     "firebase-admin>=6.7.0",
+    "google>=3.0.0",
+    "google-genai>=1.7.0",
+    "google-generativeai>=0.8.4",
     "pandas>=2.2.3",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
